Fix BroadcastMessage text color in Dark mode

--- a/src/components/base/broadcast_message/broadcast_message.scss
+++ b/src/components/base/broadcast_message/broadcast_message.scss
@@ -1,5 +1,5 @@
 .gl-broadcast-message {
-  @include gl-text-white;
+  @include gl-text-contrast-light;
   @include gl-display-flex;
   @include gl-justify-content-space-between;
   @include gl-align-items-flex-start;
